--- a/SparseWPFApp/SparseWPFApp.csproj
+++ b/SparseWPFApp/SparseWPFApp.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows10.0.19041.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
@@ -17,6 +17,6 @@
     <PackageReference Include="DesktopBridge.Helpers" Version="1.2.2" />
   </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="copy &quot;$(SolutionDir)\SparseWPFAppPackaged\package.appxmanifest&quot; &quot;$(SolutionDir)\SparseWPFAppPackaged\appxmanifest.xml&quot; /y&#xD;&#xA;&quot;C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\makeappx&quot; pack /d &quot;$(SolutionDir)\SparseWPFAppPackaged&quot; /p &quot;$(ProjectDir)\package.msix&quot; /nv /o&#xD;&#xA;&quot;C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\signtool&quot; sign /fd SHA256 /a /f &quot;$(SolutionDir)\signingkey.pfx&quot; /p &quot;password&quot; &quot;$(ProjectDir)\package.msix&quot;&#xD;&#xA;" />
+    <Exec Command="copy &quot;$(SolutionDir)\SparseWPFAppPackaged\package.appxmanifest&quot; &quot;$(SolutionDir)\SparseWPFAppPackaged\appxmanifest.xml&quot; /y&#xD;&#xA;&quot;C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\makeappx&quot; pack /d &quot;$(SolutionDir)\SparseWPFAppPackaged&quot; /p &quot;$(ProjectDir)\package.msix&quot; /nv /o&#xD;&#xA;&quot;C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x64\signtool&quot; sign /fd SHA256 /a /f &quot;$(SolutionDir)\signingkey.pfx&quot; /p &quot;123&quot; &quot;$(ProjectDir)\package.msix&quot;&#xD;&#xA;" />
   </Target>
 </Project>
